apps/stateful-app/deploy/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps-stateful
  labels:
    kubernetes.io/metadata.name: apps-stateful
